[package]
name = "scrabble-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.0"
crossterm_cursor = "0.4.0"
itertools = "0.10.5"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
termion = "2.0.1"

[dev-dependencies]
rstest = "0.16.0"
